Feature: PDF Document Upload System Implementation (#1)
* Implement models for domain, API requests/responses, and exception handling

* Fix Lambda Context retrieval

* Document upload implementation

* refactored for clarity

* Refactor storage facade methods and improve documentation for clarity

* Refactor DocumentRecord model for clarity and consistency in storage handling

* Refactor PageBundleRecord model for clarity and consistency in storage handling

* Implement DynamoDB document repository and refactor upload service for improved storage handling

* Storage exceptions for database operations

* Stable document ID generation methods based on content or URL

* chore: formatting

* save document size in bytes

* Update docs/todo.md


* refactoring: code cleanup

* fix: update document repository type in UploadService constructor

* fix: use enum for document processing status in API handler

---------
